force-app/main/default/objects/Bird_Sighting__c/Bird_Sighting__c.object-meta.xml
<CustomObject>
    <label>Bird Sighting</label>
    <pluralLabel>Bird Sightings</pluralLabel>
    <nameField>
        <displayFormat>SIGHT-{0000}</displayFormat>
        <label>Sighting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>