force-app/main/default/objects/Bird_Sighting__c/fields/Bird_Species__c.field-meta.xml
<CustomField>
    <fullName>Bird_Species__c</fullName>
    <label>Bird Species</label>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Bird_Species__c</referenceTo>
    <relationshipLabel>Bird Sightings</relationshipLabel>
    <relationshipName>Bird_Sightings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>