force-app/main/default/objects/Bird_Sighting__c/fields/Birding_Location__c.field-meta.xml
<CustomField>
    <fullName>Birding_Location__c</fullName>
    <label>Birding Location</label>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Birding_Location__c</referenceTo>
    <relationshipLabel>Bird Sightings</relationshipLabel>
    <relationshipName>Bird_Sightings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>