force-app/main/default/objects/Bird_Sighting__c/fields/Quantity_Observed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Observed__c</fullName>
    <label>Quantity Observed</label>
    <defaultValue>1</defaultValue>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>