force-app/main/default/objects/Bird_Sighting__c/fields/Sighting_Date__c.field-meta.xml
<CustomField>
    <fullName>Sighting_Date__c</fullName>
    <label>Sighting Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>