force-app/main/default/objects/Bird_Sighting__c/fields/Weather_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Weather_Conditions__c</fullName>
    <label>Weather Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunny</fullName>
            </value>
            <value>
                <fullName>Cloudy</fullName>
            </value>
            <value>
                <fullName>Rainy</fullName>
            </value>
            <value>
                <fullName>Windy</fullName>
            </value>
            <value>
                <fullName>Foggy</fullName>
            </value>
            <value>
                <fullName>Snowy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>